load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "buildtracker.go",
        "ela_autoscaler.go",
        "ela_fluentd.go",
        "ela_pod.go",
        "ela_queue.go",
        "ela_resolve.go",
        "ela_resource.go",
        "ela_service.go",
        "revision.go",
    ],
    importpath = "github.com/knative/serving/pkg/controller/revision",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/serving:go_default_library",
        "//pkg/apis/serving/v1alpha1:go_default_library",
        "//pkg/client/clientset/versioned:go_default_library",
        "//pkg/client/informers/externalversions:go_default_library",
        "//pkg/client/listers/serving/v1alpha1:go_default_library",
        "//pkg/controller:go_default_library",
        "//pkg/logging:go_default_library",
        "//pkg/logging/logkey:go_default_library",
        "//pkg/queue:go_default_library",
        "//vendor/github.com/google/go-containerregistry/name:go_default_library",
        "//vendor/github.com/google/go-containerregistry/v1/remote:go_default_library",
        "//vendor/github.com/josephburnett/k8sflag/pkg/k8sflag:go_default_library",
        "//vendor/github.com/knative/build/pkg/apis/build/v1alpha1:go_default_library",
        "//vendor/github.com/knative/build/pkg/client/informers/externalversions:go_default_library",
        "//vendor/github.com/mattmoor/k8schain:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/k8s.io/api/apps/v1:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/meta:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/intstr:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/runtime:go_default_library",
        "//vendor/k8s.io/client-go/informers:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "ela_resolve_test.go",
        "queueing_test.go",
        "revision_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/serving:go_default_library",
        "//pkg/apis/serving/v1alpha1:go_default_library",
        "//pkg/client/clientset/versioned/fake:go_default_library",
        "//pkg/client/informers/externalversions:go_default_library",
        "//pkg/controller:go_default_library",
        "//pkg/controller/testing:go_default_library",
        "//pkg/queue:go_default_library",
        "//vendor/github.com/google/go-cmp/cmp:go_default_library",
        "//vendor/github.com/google/go-cmp/cmp/cmpopts:go_default_library",
        "//vendor/github.com/google/go-containerregistry/name:go_default_library",
        "//vendor/github.com/google/go-containerregistry/v1:go_default_library",
        "//vendor/github.com/google/go-containerregistry/v1/random:go_default_library",
        "//vendor/github.com/josephburnett/k8sflag/pkg/k8sflag:go_default_library",
        "//vendor/github.com/knative/build/pkg/apis/build/v1alpha1:go_default_library",
        "//vendor/github.com/knative/build/pkg/client/clientset/versioned/fake:go_default_library",
        "//vendor/github.com/knative/build/pkg/client/informers/externalversions:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/k8s.io/api/apps/v1:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/intstr:go_default_library",
        "//vendor/k8s.io/client-go/informers:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/fake:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/testing:go_default_library",
    ],
)
