load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "ela_ingress.go",
        "ela_istio_route.go",
        "ela_service.go",
        "route.go",
    ],
    importpath = "github.com/elafros/elafros/pkg/controller/route",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/ela:go_default_library",
        "//pkg/apis/ela/v1alpha1:go_default_library",
        "//pkg/apis/istio/v1alpha2:go_default_library",
        "//pkg/client/clientset/versioned:go_default_library",
        "//pkg/client/informers/externalversions:go_default_library",
        "//pkg/client/listers/ela/v1alpha1:go_default_library",
        "//pkg/controller:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/api/extensions/v1beta1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/intstr:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
        "//vendor/k8s.io/client-go/informers:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/scheme:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/typed/core/v1:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
        "//vendor/k8s.io/client-go/tools/record:go_default_library",
        "//vendor/k8s.io/client-go/util/workqueue:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "queueing_test.go",
        "route_test.go",
    ],
    embed = [":go_default_library"],
    importpath = "github.com/elafros/elafros/pkg/controller/route",
    deps = [
        "//pkg/apis/ela/v1alpha1:go_default_library",
        "//pkg/apis/ela:go_default_library",
        "//pkg/apis/istio/v1alpha2:go_default_library",
        "//pkg/client/clientset/versioned/fake:go_default_library",
        "//pkg/client/clientset/versioned/typed/ela/v1alpha1:go_default_library",
        "//pkg/client/informers/externalversions:go_default_library",
        "//pkg/controller/testing:go_default_library",
        "//pkg/controller:go_default_library",
        "//vendor/github.com/google/go-cmp/cmp/cmpopts:go_default_library",
        "//vendor/github.com/google/go-cmp/cmp:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/client-go/informers:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/fake:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/typed/extensions/v1beta1:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/testing:go_default_library",
    ],
)
