load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "ela_resource.go",
        "service.go",
        "service_configuration.go",
        "service_route.go",
    ],
    importpath = "github.com/knative/serving/pkg/controller/service",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/serving:go_default_library",
        "//pkg/apis/serving/v1alpha1:go_default_library",
        "//pkg/client/clientset/versioned:go_default_library",
        "//pkg/client/informers/externalversions:go_default_library",
        "//pkg/client/listers/serving/v1alpha1:go_default_library",
        "//pkg/controller:go_default_library",
        "//pkg/logging/logkey:go_default_library",
        "//vendor/go.opencensus.io/stats:go_default_library",
        "//vendor/go.opencensus.io/tag:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/runtime:go_default_library",
        "//vendor/k8s.io/client-go/informers:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
        "//vendor/k8s.io/client-go/tools/record:go_default_library",
        "//vendor/k8s.io/client-go/util/workqueue:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "service_configuration_test.go",
        "service_route_test.go",
        "service_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/serving:go_default_library",
        "//pkg/apis/serving/v1alpha1:go_default_library",
        "//vendor/github.com/google/go-cmp/cmp:go_default_library",
        "//vendor/github.com/google/go-cmp/cmp/cmpopts:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
    ],
)
