load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = ["hooks.go"],
    importpath = "github.com/google/elafros/pkg/controller/testing",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/client-go/testing:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["hooks_test.go"],
    embed = [":go_default_library"],
    importpath = "github.com/google/elafros/pkg/controller/testing",
    deps = [
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/fake:go_default_library",
    ],
)
