load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["queue.go"],
    importpath = "github.com/google/elafros/pkg/sidecars/queue",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/autoscaler/types:go_default_library",
        "//vendor/github.com/gorilla/websocket:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
	"//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
    ],
)

go_binary(
    name = "ela-queue",
    embed = [":go_default_library"],
    importpath = "github.com/google/elafros/pkg/sidecars/queue",
    pure = "on",
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    binary = ":ela-queue",
    visibility = ["//visibility:public"],
)
