load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "configuration_types.go",
        "doc.go",
        "register.go",
        "revision_types.go",
        "route_types.go",
        "service_types.go",
        "zz_generated.deepcopy.go",
    ],
    importpath = "github.com/elafros/elafros/pkg/apis/ela/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/build/v1alpha1:go_default_library",
        "//pkg/apis/ela:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "configuration_types_test.go",
        "revision_types_test.go",
        "route_types_test.go",
        "service_types_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//vendor/k8s.io/api/core/v1:go_default_library"],
)
